--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,32 @@
-*.class
+/RUNNING_PID
+/logs/
+/project/*-shim.sbt
+/project/project/
+/project/target/
+/target/
+.idea
 
-# Mobile Tools for Java (J2ME)
-.mtj.tmp/
+# Ignore Play! working directory #
+bin/
+/db
+.eclipse
+.idea
+/lib/
+/logs/
+/modules
+/project/project
+/project/target
+/target
+tmp/
+test-result
+server.pid
+*.iml
+*.eml
+/dist/
+.cache
 
-# Package Files #
-*.jar
-*.war
-*.ear
-
-# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
-hs_err_pid*
+activator*
+project/*
+conf/credentials.conf
+conf/*.pem
+conf/local.conf
